--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="card__tile">
             <h2>Phan Bảo Khang</h2>
-            <p>Follow Me</p>
+            <p>Bấm Vô Icon </p>
         </div>
         <div class="card__social">
             <a href="https://www.facebook.com/Mr.Binn.3152"><i class='bx bxl-facebook-circle'></i></a>
@@ -26,7 +26,7 @@
             <a href="https://github.com/Phan-BaoKhang"><i class='bx bxl-github'></i></a>
             <a href="https://www.instagram.com/khangg_o.o/"><i class='bx bxl-instagram-alt'></i></a>
         </div>
-        <button>Contact Me</button>
+        <button>Thank You</button>
         
         </div>
     </div>
