--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="card__social">
             <a href="https://www.facebook.com/Mr.Binn.3152"><i class='bx bxl-facebook-circle'></i></a>
-            <a href="https://www.tiktok.com/@thl_bin"><i class='bx bxl-tiktok'></i></a>
+            <a href="https://www.tiktok.com/@thl_bkhang"><i class='bx bxl-tiktok'></i></a>
             <a href="https://github.com/Phan-BaoKhang"><i class='bx bxl-github'></i></a>
             <a href="https://www.instagram.com/khangg_o.o/"><i class='bx bxl-instagram-alt'></i></a>
         </div>
