--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <a href="https://www.tiktok.com/@thl_bkhang"><i class='bx bxl-tiktok'></i></a>
             <a href="https://github.com/Phan-BaoKhang"><i class='bx bxl-github'></i></a>
             <a href="https://www.instagram.com/khangg_o.o/"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="https://discord.gg/Z9xnyuaN"><i class='bx bxl-discord'></i></a>
         </div>
+
         <button>Thank You</button>
         
         </div>
